# python-telegram-framework

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: pypi-publish.yml  test-lint.yml
telegram_framework/: __main__.py  shortcuts.py  utils.py
telegram_framework/conf/: __init__.py  default_settings.py  utils.py
telegram_framework/core/: __init__.py  app.py  module.py
telegram_framework/exceptions/: __init__.py
telegram_framework/handlers/: __init__.py  base.py  decorators.py
telegram_framework/management/: __init__.py  base.py  templates.py  utils.py
telegram_framework/management/commands/: clearenv.py  createmodule.py  startproject.py
telegram_framework/templates/module_template/: callbacks.py  handlers.py  models.py
telegram_framework/templates/project_template/: Pipfile  app.py  manage.py  settings.py
telegram_framework/templates/project_template/app/: callbacks.py  handlers.py  settings.py
telegram_framework/templates/project_template/resources/assets/: readme
telegram_framework/templates/project_template/resources/lang/: README
telegram_framework/templates/project_template/resources/templates/: README
telegram_framework/utils/: functional.py  version.py
tests/: conftest.py  fixtures.py  test_initialization.py  test_modules.py  test_startproject.py
